--- a/admin.css
+++ b/admin.css
@@ -4,9 +4,11 @@
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
+    font-family: 'Times New Roman', Times, serif;
+
 }
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
@@ -110,9 +112,18 @@ html, body {
     padding: 2vw;
     background-color: #fff;
     border-radius: 0px;
-    background: linear-gradient(to right , #7e6fd543, #e9b9f337 50%, #e9b9f337 50%, #898be570);
+    background: linear-gradient(to bottom, #7e6fd543, #e9b9f337 50%, #e9b9f337 50%, #898be570);
 }
+.student-rapport{
+    background: linear-gradient(to bottom, #B4B7E3 20%, #ebebf291 80%);
+    margin-top: 0.0001vw;
+    width: 100%;
+    height: 100%;
+    padding: 2vw;
+    background-color: #fff;
+    border-radius: 0px;
 
+}
 .title-section {
     text-align: left;
     margin-bottom: 30px;
@@ -217,6 +228,7 @@ html, body {
     border-radius: 15px;
     cursor: pointer;
     box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.2);
+    font-size: medium;
 }
 .details-button-school:hover {
     background-color: #3a21a0;
@@ -230,6 +242,7 @@ html, body {
     border-radius: 15px;
     cursor: pointer;
     box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.2);
+    font-size: medium;
 }
 .details-button-student:hover {
     background-color: #3a21a0;
@@ -242,6 +255,7 @@ html, body {
     text-align: center;
     margin-top: -8.5%; 
     margin-left: -13.5%;
+    opacity: 0.6;
 }
 /* Add this in your existing CSS file or <style> tag */
 .modal-overlay {
@@ -328,4 +342,18 @@ html, body {
     text-align: left;
     margin-top: 1vw;
     margin-bottom: 1vw;
+}
+@keyframes CSSreveal {
+    from {
+        opacity: 0.8;
+        transform: translateY(100px);
+    }
+    to{
+        opacity: 1;
+        transform: translateY(0);
+    }}
+.reveal{
+    animation: CSSreveal ease-in-out both;
+    animation-timeline: view() ;
+    animation-range: entry 0% cover 70%;
 }
