--- a/projet-p/schedule.css
+++ b/projet-p/schedule.css
@@ -4,6 +4,8 @@
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
+    font-family: 'Times New Roman', Times, serif;
+
 }
 body {
     min-height: 100vh;
@@ -11,7 +13,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
 }
 nav {
     margin-top: 0;
@@ -126,7 +128,7 @@ nav li:first-child {
 }
 .line-wrapper {
     margin-top: 0;
-    text-align: center; 
+    text-align: left; 
   }
 
   .line {
@@ -134,6 +136,7 @@ nav li:first-child {
     width: 90%;
     height: 0.5px; 
     background-color: rgba(0, 0, 0, 0.481); 
+    margin-left: 2vw;
   }
 
   .footer{
@@ -272,7 +275,7 @@ svg{
   color: #FFFFFF;
   cursor: pointer;
   display:flex;
-  font-family: din-round,sans-serif;
+  font-family: 'Times New Roman', Times, serif;
   font-size: 15px;
   font-weight: 700;
   letter-spacing: .8px;
