--- a/sign in/sign.css
+++ b/sign in/sign.css
@@ -6,7 +6,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     text-decoration: none;
     list-style: none;
 }
@@ -159,15 +159,21 @@ nav li:first-child {
 }
 
 .container p {
-    font-size: 14px;
+    font-size: 18px;
     line-height: 20px;
     letter-spacing: 0.3px;
     margin: 20px;
+    font-weight: 500;
+}
+
+.container h1{
+    font-weight: bold;
+    font-size: 2.5em;
 }
 
 
 .container span {
-    font-size: 12px;
+    font-size: 15px;
 }
 
 .container a {
@@ -189,6 +195,7 @@ nav li:first-child {
     text-transform: uppercase;
     margin-top: 10px;
     cursor: pointer;
+    font-size: 800;
 
 }
 
@@ -229,13 +236,12 @@ nav li:first-child {
     border: 2px solid #9fa9c5;
     margin: 8px 0;
     padding: 5px 5px;
-    font-size: 13px;
+    font-size: 15px;
     border-radius: 30px;
     width: 25%;
     outline: none;
     color: #6e6c71;
     text-align: center;
-
 
 }
 
@@ -245,7 +251,7 @@ nav li:first-child {
     border: 2px solid #9fa9c5;
     margin: 8px 0;
     padding: 10px 15px;
-    font-size: 13px;
+    font-size: 15px;
     border-radius: 30px;
     width: 100%;
     outline: none;
