--- a/student_regist.css
+++ b/student_regist.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     background: radial-gradient(circle, #1a2e7c5c, #c7c1d3);
     display: flex;
     justify-content: center;
@@ -47,6 +47,8 @@ body {
     border: 1px solid #ccc;
     border-radius: 15px;
     margin-right: 10px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: medium;
 }
 
 button {
@@ -58,6 +60,9 @@ button {
     border: none;
     border-radius: 15px;
     cursor: pointer;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: medium;
+    font-weight: 500;
 }
 
 button:hover {
@@ -69,6 +74,7 @@ margin-top: 2.5vw;
 margin-bottom: 2vw;
 padding: 10px;
 color: #3f2e41a3;
+font-weight: 510;
 }
 
  /* CSS for the popup hna  */
@@ -92,8 +98,11 @@ color: #3f2e41a3;
     width: 20vw;
     text-align: center;
     border-radius: 10px;
+    font-weight: 500;
 }
 
 .dismiss-btn {
     margin-top: 20px;
+    font-size: medium;
+    font-weight: 500;
 }
