--- a/student_search.css
+++ b/student_search.css
@@ -4,10 +4,11 @@
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     margin: 0;
     padding: 0;
     /* Set linear gradient background */
@@ -130,10 +131,12 @@ label.logo {
     margin-bottom: 5px;
     margin-left: 2vw;
     margin-top: 1vw;
+    font-size: 2.5rem;
 }
 .subtitle {
     margin-bottom: 10px;
     margin-left: 2vw;
+    font-weight: 500;
 }
 .divider {
     border: none;
@@ -147,6 +150,7 @@ label.logo {
     align-items: center;
     margin-left: 67.4vw;
     margin-top: -6vw;
+    position: relative;
 }
 
 #search-input {
@@ -155,6 +159,7 @@ label.logo {
     border: 2px solid #ccc;
     width: 24vw;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
+    font-size: medium;
 }
 
 #search-button {
@@ -165,6 +170,8 @@ label.logo {
     color: #fff;
     cursor: pointer;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
+    font-size: medium;
+    font-weight: 500;
 
 }
 .wrapper {
@@ -289,7 +296,8 @@ border: 4px solid #6d6b7e14;
 }
     
 .card button:hover {
-    background: #b3a8ef;
+    box-shadow: 0 0 5px #a34eca, 0 0 15px #9b8db1, 0 0 29px #c6bdd7, 0 0 150px #8258e4;
+    transition: 0.5s ease-in-out;
     }
     
 @media screen and (max-width: 900px){
@@ -370,4 +378,48 @@ border: 4px solid #6d6b7e14;
 .dropdown:hover .dropdown-content {
     display: block;
     
+}
+/* Dropdown button styles */
+.dropdown-btn {
+    
+    text-decoration: none;
+    display: block;
+    border: none; /* Remove border */
+    background: none; /* Remove background */
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+    color: black; /* Make text transparent */
+    font-size: 18px; /* Set font size to 0 to hide text */
+}
+
+/* Apply hover effect to dropdown button */
+.dropdown-btn:hover {
+    color: #ddd; /* Change to match the hover effect color */
+}
+
+
+#suggestions {
+    display: none;
+    position: absolute;
+    top: 100%; /* Position below the search box */
+    left: 0;
+    width: 74%;
+    background-color: #fff;
+    border: 2px solid #d4d3d3;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    z-index: 1000; /* Ensure it appears above other elements */
+    max-height: 200px; /* Limit max height to avoid excessive scrolling */
+    overflow-y: auto; /* Enable vertical scrolling if needed */
+    border-radius: 15px;
+}
+
+/* Style for individual suggestions */
+.suggestion {
+    padding: 8px 12px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.suggestion:hover {
+    background-color: #f5f5f5;
 }
