--- a/views/teacher_student.ejs
+++ b/views/teacher_student.ejs
@@ -1,4 +1,12 @@
-*{
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <title>teachers | edulink</title>
+  <style>
+    *{
     margin: 0;
     padding: 0;
         box-sizing: border-box;
@@ -7,7 +15,9 @@
         list-style: none;
        
 }
+
 body{
+ 
 margin-right:0;
 background: linear-gradient(to right, #ffff, #d9dafd);
 }
@@ -406,3 +416,161 @@ svg{
      color: #624972;
      
  }
+
+
+ .modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.5);
+  }
+  
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+  }
+  
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .icon{
+    color:#624972;
+    font-size: 50px;
+  }
+  </style>
+</head>
+<body>
+
+<section>
+    <nav class="sidebar">
+      <ul>
+        <li onclick="hideSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 96 960 960" width="26"><path d="m249 849-42-42 231-231-231-231 42-42 231 231 231-231 42 42-231 231 231 231-42 42-231-231-231 231Z"/></svg></a></li>
+        <li><a href="#">HOME</a></li>
+        <li><a href="#">about</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a class="" href="#">Log Out</a></li>
+      </ul>
+    </nav>
+    <nav>
+      <label class="logo"><img src="edulink3.png" alt="" /></label>
+      <ul>
+        <li><a class="hideOnMobile" href="#">HOME</a></li>
+        <li><a class="hideOnMobile" href="#">about</a></li>
+        <li><a class="hideOnMobile" href="#">Contact</a></li>
+        <li><a class="hideOnMobile" href="#">Log Out</a></li>
+        <li class="menu-button" onclick="showSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 96 960 960" width="26"><path d="M120 816v-60h720v60H120Zm0-210v-60h720v60H120Zm0-210v-60h720v60H120Z"/></svg></a></li>
+      </ul>
+    </nav>
+</section>
+    <section class="Tliste">
+        <h1>Teachers Section</h1>
+        <p>Discover Our Educators</p>
+        <hr>
+        <% teachers.forEach(function(teacher) { %>
+        <div class="teachers">
+            <ul>
+                <li><i class="fa-solid fa-chalkboard-user icon"></i></li>
+                <li><%= teacher.speciality %></li>
+                <li><%= teacher.employment_t %> years of experience</li>
+                <li>
+                   Age :  <span class="teacher-age" data-birthdate="<%= teacher.birthdate_t %>"></span>
+                </li>
+                <li><%= teacher.name_t %></li>
+                <li class="teacher"><div class="star-rating" data-rating="0">
+                  <span class="star" data-value="1">&#9733;</span>
+                  <span class="star" data-value="2">&#9733;</span>
+                  <span class="star" data-value="3">&#9733;</span>
+                  <span class="star" data-value="4">&#9733;</span>
+                  <span class="star" data-value="5">&#9733;</span>
+                </div></li>
+            </ul>
+        </div>
+        <% }); %>
+
+        <svg width="100%" height="200" viewBox="0 0 1480 200" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M0 199.5C0 199.5 151.343 149.991 693.719 149.991C1236.09 149.991 1475.02 0 1475.02 0V200H0V199.5Z" fill="#262653" fill-opacity="0.05"/>
+          <path d="M4.98315 199.568C4.98315 199.568 156.326 149.82 698.702 149.82C1241.08 149.82 1480 39 1480 39V200H4.98315V199.568Z" fill="#262653" fill-opacity="0.15"/>
+          <path d="M0 199.539C0 199.539 153.409 160.613 703.189 160.613C1252.97 160.613 1480 22 1480 22V200H0V199.539Z" fill="#262653" fill-opacity="0.1"/>
+      </svg>
+  </section>
+  
+  <footer class="footer">
+      <div class="divs-c-l"> 
+          <h3>OUR SERVICES</h3>
+          <ul>           
+              <li><a href="#">About us</a></li>
+              <li><a href="#">Help</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Term Of Use</a></li>
+          </ul>
+      </div>
+  
+      <div class="divs-c-s"> 
+          <img src="edulinklogo.png" alt="" />
+          <h4>your ultimate guide for educational excellence!</h4>
+          <button class="button-footer">JOIN US ></button>
+      </div>
+  
+      <div class="icons">
+          <h3>CONTACT US</h3>
+          <i class="fab fa-facebook"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-instagram"></i>
+          <i class="fa fa-envelope"></i>
+      </div>
+  </footer>
+  
+  <script>
+    function showSidebar() {
+  const sidebar = document.querySelector('.sidebar');
+  sidebar.style.display = 'flex';
+}
+
+
+function hideSidebar() {
+  const sidebar = document.querySelector('.sidebar');
+  sidebar.style.display = 'none';
+}
+document.addEventListener('DOMContentLoaded', function() {
+    const teacherAgeElements = document.querySelectorAll('.teacher-age');
+    
+    teacherAgeElements.forEach(function(element) {
+        const birthdate = element.dataset.birthdate;
+        const age = calculateAge(birthdate);
+        element.textContent = age;
+    });
+});
+
+function calculateAge(birthdate) {
+    const today = new Date();
+    const birthDate = new Date(birthdate);
+    let age = today.getFullYear() - birthDate.getFullYear();
+    const month = today.getMonth() - birthDate.getMonth();
+    if (month < 0 || (month === 0 && today.getDate() < birthDate.getDate())) {
+        age--;
+    }
+    return age;
+}
+    </script>
+
+</body>
+</html>
