--- a/views/student_search.html
+++ b/views/student_search.html
@@ -68,7 +68,7 @@
     <!--- Search section ***********************************************************-->
    
     <div class="search-box">
-        <input  type="text" placeholder="Search..." id="search-input">
+        <input  type="text" placeholder="Enter a valid Algerian state" id="search-input">
         <button type="button" id="search-button" onclick="search()">Search</button>
     </div>
 </div>
