--- a/school - Copie/style.css
+++ b/school - Copie/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 nav {
-   
+
     top: 0;
     width: 100%;
     margin-top: 0;
@@ -118,12 +118,12 @@ nav li:first-child {
         font-size: 10px;
     }
 
-   .logo img {
-       width: 150px;
-       height: auto;
-       padding-left: 20px;
-       padding-top: 30px;
-   }
+    .logo img {
+        width: 150px;
+        height: auto;
+        padding-left: 20px;
+        padding-top: 30px;
+    }
 }
 
 @media(max-width: 400px) {
@@ -435,7 +435,7 @@ nav li:first-child {
     margin-top: 1vw;
     margin-bottom: 0px;
     align-items: center;
-    
+
 }
 
 h1 {
@@ -452,7 +452,7 @@ p {
 }
 
 hr {
-    margin: 5px 30px;
+    margin: 5px 70px;
     color: #0035f7;
 }
 
@@ -462,10 +462,12 @@ hr {
         margin-top: 25%;
         font-size: 25px;
     }
-    p{
-    font-size: 40%;
+
+    p {
+        font-size: 40%;
     }
-    hr{
+
+    hr {
         padding: 0px 4px;
     }
 }
@@ -474,16 +476,17 @@ svg {
     color: #ffffff;
     border: none;
     margin-top: auto;
-    margin-bottom: -1.7956%;
+    margin-bottom: -1.5vw;
+    width: 100%;
 }
 
 .footer {
-    border: none;
-    height: 300px;
+    border:none;
+    height: 23vw;
     padding: 20px;
-    background: linear-gradient(to right, #c0c0ce, #adadcc);
+    background: linear-gradient(to bottom,#8d97c67c,#DADDEB);
+    width: 100%;
 }
-
 .footer {
     width: 100%;
     margin: auto;
@@ -491,129 +494,133 @@ svg {
     padding: 30px 0;
 }
 
-.footer h3 {
-    color: #070F2B;
-    margin-bottom: 25px;
-    margin-top: 20px;
-    font-weight: 600;
+ .footer h3 {
+     color: #070F2B;
+     margin-bottom: 25px;
+     margin-top: 20px;
+     font-weight: 600;
+ }
+
+ .icons .fab {
+     color: #070F2B;
+     margin: 0 13px;
+     cursor: pointer;
+     padding: 20px 0;
+     font-size: 20px;
+ }
+ .icons .fa {
+     color: #070F2B;
+     margin: 0 13px;
+     cursor: pointer;
+     padding: 20px 0;
+     font-size: 20px;
+ }
+
+ .divs-c-s img {
+     margin-top: 1px;
+     margin-bottom: 1px;
+     margin-left: 30%;
+     height: 8.5vw;
+     min-width: 16vw;
+ }
+
+ .divs-c-s h4 {
+     color: #070F2B;
+     margin-left: 22%;
+
+ }
+
+ footer div {
+     height: 100%;
+     width: 400px;
+     float: left;
+
+ }
+
+ .divs-c-l ul li {
+     list-style: none;
+     margin-bottom: 12px;
+     color: #070F2B;
+
+ }
+
+ .divs-c-l ul li a {
+     text-decoration: none;
+     color: #070F2B;
+ }
+
+ .divs-c-l {
+
+     top: 0;
+     left: 0px;
+     padding-left: 10px;
+ }
+
+
+ .button-footer {
+     background-color: #ffffff;
+     color: #b37fde;
+     font-size: 12px;
+     padding: 15px 45px;
+     border: 3px #b37fde groove;
+     border-radius: 23px;
+     font-weight: 600;
+     letter-spacing: 0.5px;
+     text-transform: uppercase;
+     margin-top: 30px;
+     cursor: pointer;
+     -webkit-border-radius: 23px;
+     -moz-border-radius: 23px;
+     -ms-border-radius: 23px;
+     -o-border-radius: 23px;
+     margin-left: 22%;
+
+
 }
 
-.icons .fab {
-    color: #070F2B;
-    margin: 0 13px;
-    cursor: pointer;
-    padding: 20px 0;
-    font-size: 20px;
-}
-.icons .fa {
-    color: #070F2B;
-    margin: 0 13px;
-    cursor: pointer;
-    padding: 20px 0;
-    font-size: 20px;
-}
+ .button-footer:hover {
+     box-shadow: 0 0 5px #ffffff, 0 0 30px #ffffff, 0 0 90px #8484f0;
+     transition: 0.5s ease-in-out;
+ }
 
-.divs-c-s img {
-    margin-top: 1px;
-    margin-bottom: 1px;
-    height: 100px;
-    width: 150px;
-}
+ .divs-c-l h3 {
+     padding-left: 30px;
+ }
 
-.divs-c-s h4 {
-    color: #070F2B;
-}
+ @media(max-width:700px) {
+     footer {
+         font-size: 10px;
+         height: 100%;
+     }
 
-footer div {
-    height: 100%;
-    width: 400px;
-    float: left;
-
-}
-
-.divs-c-l ul li {
-    list-style: none;
-    margin-bottom: 12px;
-    color: #070F2B;
-
-}
-
-.divs-c-l ul li a {
-    text-decoration: none;
-    color: #070F2B;
-}
-
-.divs-c-l {
-
-    top: 0;
-    left: 0px;
-    padding-left: 10px;
-}
-
-
-.button-footer {
-    background-color: #ffffff;
-    color: #b37fde;
-    font-size: 12px;
-    padding: 15px 45px;
-    border: 3px #b37fde groove;
-    border-radius: 23px;
-    font-weight: 600;
-    letter-spacing: 0.5px;
-    text-transform: uppercase;
-    margin-top: 30px;
-    cursor: pointer;
-    -webkit-border-radius: 23px;
-    -moz-border-radius: 23px;
-    -ms-border-radius: 23px;
-    -o-border-radius: 23px;
-}
-
-.button-footer:hover {
-    box-shadow: 0 0 5px #ffffff, 0 0 30px #ffffff, 0 0 90px #8484f0;
-    transition: 0.5s ease-in-out;
-}
-
-.divs-c-l h3 {
-    padding-left: 30px;
-}
-
-@media(max-width:700px) {
-    footer {
-        font-size: 10px;
+     footer div {
+         font-size: 10px;
+         height: 100px;
+         width: 110px;
+         float: left;
         height: 100%;
-    }
+     }
 
-    footer div {
+     .divs-c-s img {
+         margin-top: 1px;
+         margin-bottom: 1px;
+         height: 80px;
+         width: 120px;
+     }
+
+     .divs-c-s h4 {
+         color: #fff;
+         font-size: 10px;
+     }
+         svg {
+             margin-top: auto;
+             margin-bottom: -22.4%;
+         }
+    .button-footer{
         font-size: 10px;
-        height: 100px;
-        width: 110px;
-        float: left;
-        height: 100%;
+            padding: 10px 15px;
     }
-
-    .divs-c-s img {
-        margin-top: 1px;
-        margin-bottom: 1px;
-        height: 80px;
-        width: 120px;
-    }
-
-    .divs-c-s h4 {
-        color: #fff;
-        font-size: 10px;
-    }
-
-    svg {
-        margin-top: auto;
-        margin-bottom: -22.4%;
-    }
-
-    .button-footer {
-        font-size: 10px;
-        padding: 10px 15px;
-    }
-}
+ }
 .profil {
     display: flex;
     justify-content: flex-start;
@@ -628,7 +635,7 @@ footer div {
 
 .info-c {
     flex-basis: 40%;
-    
+
     border-radius: 10px;
     margin-left: 100px;
     margin-top: 40px;
@@ -639,11 +646,11 @@ footer div {
 }
 
 .button-content {
-    
+
     display: flex;
-        justify-content: space;
-        margin-bottom: 20px;
-        /* Adjust this margin as needed */
+    justify-content: space;
+    margin-bottom: 20px;
+    /* Adjust this margin as needed */
 }
 
 .content-a {
@@ -653,17 +660,17 @@ footer div {
     border-radius: 10px;
     box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.5);
     align-content: center;
-    background-color: #a0a0f2;
+    background-color: #e1e1f9;
     color: #000;
     border-color: transparent;
     display: inline-block;
     display: inline-block;
-    min-width: 190px;
+    min-width: 220px;
     min-height: 120px;
-    cursor: pointer;
+
     transition: 0.5s;
-    font-size: 15px;
 }
+
 .content-a::before {
     content: "";
     position: absolute;
@@ -671,7 +678,7 @@ footer div {
     left: 50%;
     width: 5.5vw;
     height: 5.5vw;
-    background-image: url('document.png');
+    background-image: url('classroom-unscreen\ -\ Copie.gif');
     /* Replace 'your-icon.png' with your icon path */
     background-size: cover;
     /* Adjust background size if needed */
@@ -696,6 +703,7 @@ footer div {
     transform: translate(-50%, -50%);
     transition: opacity 0.5s;
 }
+
 .content-a:hover span {
     opacity: 0;
     /* Hide the text on hover */
@@ -709,15 +717,13 @@ footer div {
     box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.5);
     align-content: center;
     display: inline-block;
-    min-width: 190px;
+    min-width: 250px;
     min-height: 120px;
     background-color: #5654a0;
     color: #fff;
     border-color: transparent;
     cursor: pointer;
     transition: 0.5s;
-    font-size: 15px;
-
 }
 
 .content-b::before {
@@ -769,12 +775,10 @@ footer div {
     color: #fff;
     border-color: transparent;
     display: inline-block;
-    min-width: 190px;
+    min-width: 250px;
     min-height: 120px;
     cursor: pointer;
     transition: 0.5s;
-    font-size: 15px;
-
 }
 
 .content-c::before {
@@ -826,12 +830,10 @@ footer div {
     color: #000;
     border-color: transparent;
     display: inline-block;
-    min-width: 190px;
+    min-width: 220px;
     min-height: 120px;
     cursor: pointer;
     transition: 0.5s;
-    font-size: 15px;
-
 }
 
 .content-d::before {
@@ -878,8 +880,7 @@ footer div {
 .content-c,
 .content-d {
     margin: 10px 20px;
-    min-width: 220px;
-    
+
 }
 
 
@@ -890,6 +891,7 @@ footer div {
 .content-d:hover {
     background-color: #c3c3f5;
 }
+
 .right-side {
     width: 0%;
     display: flex;
@@ -897,7 +899,7 @@ footer div {
     align-items: center;
 }
 
-.content-container{
+.content-container {
     display: flex;
     justify-content: space;
     align-items: flex-start;
@@ -905,9 +907,40 @@ footer div {
 }
 
 .animation {
-    margin-top: 100px;
-    margin-right: 500px;
-    width: 200px;
+    margin-top: 70px;
+    margin-right: 550px;
+    width: 250px;
     height: auto;
-   
+
+
 }
+
+span img {
+    width: 90px;
+}
+
+.shine {
+    animation: shine-animation 1s infinite alternate;
+}
+
+@keyframes shine-animation {
+    from {
+        opacity: 0.5;
+    }
+    to {
+        opacity: 1;
+        text-shadow: 0 0 5px #e0aaff, 0 0 10px #d88bff, 0 0 15px #cc7cf7, 0 0 20px #bf64e6, 0 0 25px #b34bd6, 0 0 30px #a632c6, 0 0 35px #961db6;
+    }
+}
+
+.sticky {
+    position: relative;
+    transition: top 0.3s;
+}
+
+.sticky.sticky-active {
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+}
+
